syntax = "proto3";
option go_package = ".;databaseGrpc";
package databaseGrpc;

message Account {
  string accountId = 1; //objectId
  int32 playerId = 2;
  string loginPassword = 3;
  bool delete = 4;
  string phone = 5;
  int64 recentLogin = 6;
  int64 createAt = 7;
  int64 updateAt = 8;
}